# TFG-1

./: README.md  report1.2.docx
agreement/: exampleagreement.docx
api_/: Dockerfile  Makefile  README.txt  TODO.txt  main.py  package.json  requirements.txt
api_/chatbot/: chatbot.py  openRouterv2.py
api_/exponents/: CMakeLists.txt  database_main.cpp  exponents.cpp  functions.cpp  functions.h  utils.py
api_/graphics/: cliPlot.js  generatePlot.js  graphics.js
api_/static/: index.html  script.js  styles.css
api_cpp/: Dockerfile  Makefile  README.txt  main.py
api_cpp/exponents/: GaussHermite_Locations_Weights.cpp  PAM_generator.cpp  exponents.cpp  test.cpp
api_cpp/graphics/: graphics.cpp
api_cpp/static/: index.html  index_aux.html  styles.css
api_matlab/: Dockerfile  README.txt  exponents.m  graphics.m  installer_input.txt  license.lic  main.py
code/Documentació/: index.txt  metodoes_optimitzacio.txt  notes.txt
code/OpenMP/: E0.m  E0_omp.m  F0_omp.m  GaussHermite_Locations_Weights.m  task6.mlx
code/exponents/: F0_F0p_matrix.m  F0_fors.m  check_AWS.ipynb  corev2.mlx  exponents.m  exponents_test.mlx  getAwsData.m  matrix_generator.m  newton_method_v2.m
code/exponents_matlab/: E0_fors_v2.m  F0_F0p_fors.m  F0_fors.m  F0_matrix_fixed.m  PAM_generator.m  get_data.py  interpolacio.m
code/funcions + tasks/: E0.m  (+25 more)
database/: add_data.py  check_AWS.ipynb  corev2.mlx  get_data.py  notes_execution.txt
notes reunions/: interpolacio.txt
plots/: figura_task4.fig  figura_task4_f0matrix_millorada.fig
server/: Consideracions.txt  Dockerfile  Steps_AWS.txt
(+30 files in other folders)
